<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.movebrickschi</groupId>
    <artifactId>easy-tool</artifactId>
    <packaging>pom</packaging>
    <modules>
        <module>easy-tool-core</module>
        <module>easy-tool-redis-spring-boot-starter</module>
        <module>easy-tool-request</module>
        <module>easy-tool-mybatis-plus</module>
        <module>easy-tool-ai</module>
        <module>easy-tool-all</module>
    </modules>
    <version>2.5.0</version>

    <name>easy-tool</name>
    <description>Daily tool integration</description>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>LiuChunChi</name>
            <email>liuchunchiuse@163.com</email>
        </developer>
    </developers>
    <url>https://github.com/movebrickschi/easy-tool</url>
    <scm>
        <connection>https://github.com/movebrickschi/easy-tool.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:movebrickschi/easy-tool.git</developerConnection>
        <url>https://github.com/movebrickschi/easy-tool</url>
    </scm>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>8</java.version>
        <hutool.version>5.8.35</hutool.version>
        <guava.version>32.0.1-jre</guava.version>
        <redisson.version>3.41.0</redisson.version>
        <transmittable.version>2.12.6</transmittable.version>
        <commons-net.version>3.10.0</commons-net.version>
        <mica-auto.version>2.3.5</mica-auto.version>
        <mybatis-plus-core.version>3.5.6</mybatis-plus-core.version>
        <commons-lang3.version>3.17.0</commons-lang3.version>
        <spring-boot-starter.version>2.7.12</spring-boot-starter.version>
        <lombok.version>1.18.28</lombok.version>
        <spring.version>5.3.30</spring.version>
        <easy-tool-core.version>2.5.0</easy-tool-core.version>
        <easy-tool-ai.version>2.5.0</easy-tool-ai.version>
        <easy-tool-mybatis-plus.version>2.5.0</easy-tool-mybatis-plus.version>
        <easy-tool-redis-spring-boot-starter.version>2.5.0</easy-tool-redis-spring-boot-starter.version>
        <easy-tool-request.version>2.5.0</easy-tool-request.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-net</groupId>
                <artifactId>commons-net</artifactId>
                <version>${commons-net.version}</version>
            </dependency>

            <dependency>
                <groupId>net.dreamlu</groupId>
                <artifactId>mica-auto</artifactId>
                <version>${mica-auto.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.movebrickschi</groupId>
                <artifactId>easy-tool-core</artifactId>
                <version>${easy-tool-core.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.movebrickschi</groupId>
                <artifactId>easy-tool-ai</artifactId>
                <version>${easy-tool-ai.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.movebrickschi</groupId>
                <artifactId>easy-tool-mybatis-plus</artifactId>
                <version>${easy-tool-mybatis-plus.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.movebrickschi</groupId>
                <artifactId>easy-tool-redis-spring-boot-starter</artifactId>
                <version>${easy-tool-redis-spring-boot-starter.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.movebrickschi</groupId>
                <artifactId>easy-tool-request</artifactId>
                <version>${easy-tool-request.version}</version>
            </dependency>


        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>

            <!--   central发布插件    -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.4.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>liuchunchi</publishingServerId>
                    <tokenAuth>true</tokenAuth>
                </configuration>
            </plugin>
            <!--   source源码插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--   javadoc插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <additionalJOptions>
                        <!--忽略所有警告-->
                        <additionalJOption>-Xdoclint:none</additionalJOption>
                    </additionalJOptions>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <executable>D:\Program Files (x86)\GnuPG\bin\gpg.exe</executable>
                    <keyname>io.github.liuchunchiuse</keyname>
                </configuration>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


</project>
